Fix ~50 errors across 8 files (round 6 partial)
jdk25/jeps.md: Major cleanup - removed JEPs from wrong versions (430, 444, 454, 452, 462, 466, 467, 468, 469)
jdk25/release-notes.md: Removed fabricated entries - String Templates (withdrawn), wrong JEP numbers for SC/Shenandoah/ScopedValues, removed JDK 21 JEPs listed as JDK 25
api/xml-json: Fixed 3 JEP misattributions (353=Socket API not JSON-P, 471=Unsafe not JSON.B, 489=Vector API not JSON escape)
api/jdbc: Fixed JDBC 3.0 JSR (54 not 114), removed fabricated java.sql.jinc module, fixed ShardingKey API
api/logging: Fixed LoggerFinder extends (not implements), log4j-to-slf4j groupId
platform: Fixed jpackage JDK 14->16, macOS AArch64 JEP 358->391, Metal pipeline version

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>